--- a/seller.html
+++ b/seller.html
@@ -15,18 +15,26 @@
     button:hover { background: darkgreen; }
     footer{
          background-color: green;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-        }
-        header{
-             background-color: green;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-
-        }
-
+         color: white;
+         text-align: center;
+         padding: 1rem;
+    }
+    header{
+         background-color: green;
+         color: white;
+         text-align: center;
+         padding: 1rem;
+    }
+    /* Video styling */
+    .video-section {
+        text-align: center;
+        margin: 20px auto;
+        max-width: 500px;
+    }
+    .video-section video {
+        width: 100%;
+        border-radius: 8px;
+    }
 </style>
 </head>
 <body>
@@ -42,6 +50,15 @@
     <input type="password" id="password" placeholder="Password" required>
     <button onclick="login()">Login</button>
     <button onclick="register()">Register</button>
+
+    <!-- Demo video section (only before login) -->
+    <div class="video-section">
+        <h2>How to Use the Farmer Portal</h2>
+        <video controls>
+            <source src="demo.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 </div>
 
 <div class="container" id="productSection" style="display:none;">
@@ -61,9 +78,8 @@
 </div>
 
 <footer>
-        <p>&copy; 2025 Farm2Fridge</p>
-    </footer>
-
+    <p>&copy; 2025 Farm2Fridge</p>
+</footer>
 
 <script>
 function register(){
