--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
         padding: 0;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-                    url('images/back.jpg') no-repeat center/cover;
+                    url('back.jpg') no-repeat center/cover;
         height: 100vh;
         display: flex;
         align-items: center;
@@ -94,3 +94,4 @@
 
 </body>
 </html>
+
