--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
     box-shadow: 2px 0 5px rgba(0,0,0,0.2);
     transition: left 0.3s ease;
     padding-top: 60px; /* Space for header */
+    z-index: 1000;
 }
+#sidebar.open ~ main {
+  margin-left: 200px;   /* same as sidebar width */
+  transition: margin-left 0.3s ease;
+}    
 
 #sidebar nav {
     display: flex;
@@ -136,6 +141,14 @@ main.shift {
     border-top: 4px solid green; /* Bold green line */
     margin: 10px 0;
 }
+        #myVideo {
+  width: 100%;
+  height: auto;
+  max-height: 80vh;
+  object-fit: cover;
+  display: block;
+}
+
 
     </style>
 </head>
@@ -172,7 +185,7 @@ main.shift {
         <section>
             <div class="video-container">
                 <h2>Demo Video</h2>
-                <video width="100%" controls>
+                <video width="100%" controls autoplay muted loop id="myVideo">
                     <source src="demo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
@@ -195,4 +208,5 @@ main.shift {
 
     <script src="script.js"></script>
 </body>
+
 </html>
