--- a/seller.html
+++ b/seller.html
@@ -55,7 +55,7 @@
     <div class="video-section">
         <h2>How to Use the Farmer Portal</h2>
         <video controls>
-            <source src="demo.mp4" type="video/mp4">
+            <source src="farmer_demo.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -139,3 +139,4 @@ if(localStorage.getItem("loggedInFarmer")){
 
 </body>
 </html>
+
