--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ main.shift {
             <div class="video-container">
                 <h2>Demo Video</h2>
                 <video width="100%" controls autoplay muted loop id="myVideo">
-                    <source src="demo.mp4" type="video/mp4">
+                    <source src="consumer_demo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -210,3 +210,4 @@ main.shift {
 </body>
 
 </html>
+
